--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,22 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <title>Document</title>
 </head>
 <body>
-<h1>"Temperature is :-"{{temperature}}</h1>
-<h1>"Weather is :-"{{weather}}</h1>
+<div id="box">
 <img src="https://openweathermap.org/img/wn/{{ icon }}@2x.png" alt="Image">
+    <h1>Name :- {{name}}</h1>
+<h1>Temperature :-{{temperature}} F</h1>
+<h1>Weather :-{{weather}}</h1>
+
+<h1>Description :-{{description}}</h1>
+</div>
 </body>
 </html>
