--- a/templates/new.html
+++ b/templates/new.html
@@ -6,17 +6,29 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
+<div id="app">
 <h1 style ="text-align:center;padding:20px"><b><u>Live Weather Forecasting</u></b></h1>
 <br>
 {% load crispy_forms_tags %}
 <form method="post">
     {% csrf_token %}
     {{form|crispy}}
-    <button type="submit" name="Submit" class="btn btn-primary">Submit</button>
+    <button type="submit" name="Submit" class="btn btn-primary">[[title]]</button>
 </form>
+</div>
 </body>
+<script>
+new Vue({
+  delimiters: ['[[', ']]'],
+  el: '#app',
+  data: {
+    title:'Submit'
+  },
+})
+</script>
 </html>
